--- a/numpyQuickstart.ipynb
+++ b/numpyQuickstart.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -26,14 +26,24 @@
        "       [18, 19, 20]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "noktaListesi = np.arange(21).reshape(7,3)\n",
-    "noktaListesi"
+    "data = np.arange(21).reshape(7,3)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1,1],[0,1]])\n",
+    "B = np.array([[2,0],[3,4]])\n"
    ]
   }
  ],
